start of keyboard handler

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   
       <div id= "drum-kit">
-          <div class="drum" data-note="0" data-sound="kick1.wav">Kick</div>
-          <div class="drum" data-note="2" data-sound="snare1.wav">snare</div>
-          <div class="drum" data-note="4" data-sound="hihat.wav">hi-hat</div>
+          <div id="drum0" class="drum" data-note="0" data-sound="kick1.wav">Kick</div>
+          <div id="drum2" class="drum" data-note="2" data-sound="snare1.wav">snare</div>
+          <div id="drum4" class="drum" data-note="4" data-sound="hihat.wav">hi-hat</div>
       </div>
       
       <button id = "record-button">REC</button>
